--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <!-- nav가 상단이 아니라 사이드에 있어도 Header로 잡는지? -->
   <!-- header랑 main이랑 같이 flex 시켜도 되는 것이 맞는지? -->
+  <!-- 각각을 div로 잡고 감싸는 wrap도 div로 잡는 것이 맞을까? -->
   <header id="header">
     <div class="inner">
       <nav>
@@ -28,6 +29,7 @@
       </nav>
     </div>
   </header>
+  <hr>
   <main id="container">
     <!-- Section 00 : intro | visual -->
     <section id="section0" class="visual">
@@ -54,11 +56,11 @@
           <span>01</span>
           <h2>about</h2>
         </div>
-
+        <!-- Section 01 : about [01]introduce -->
         <div class="introduce">
           <div class="introduce-text">
-            <p>안녕하세요!</p>
-            <p>소나무 같은 디자이너 <b>류솔아</b> 입니다.</p>
+            <h3>안녕하세요!</h3>
+            <h3>소나무 같은 디자이너 <b>류솔아</b> 입니다.</h3>
 
             <p>소나무처럼 올곧고 바르게 자라라는 이름같이<br>
               항상 위를 보며 성장하는 디자이너가 되고 싶습니다</p>
@@ -69,12 +71,167 @@
             <span>소나무는 괜찮아!</span>
 
             <figure>
-              <img src="" alt="">
+              <img src="./img/introduce-logo.svg" alt="Pine is Fine">
             </figure>
           </div>
         </div>
+
+        <!-- Section 01 : about [02]profile -->
+        <div class="profile">
+          <div class="name">
+            <p>RYOO SOL A</p>
+            <p>류솔아</p>
+            <p>1997. 10. 13</p>
+          </div>
+          <div class="info-detail">
+            <div class="info1">
+              <div class="info1-left">
+                <div class="education">
+                  <strong>education</strong>
+                  <dl>
+                    <dt>2016 - 2023.02</dt>
+                    <dd>이화여자대학교 융합콘텐츠학과 졸업</dd>
+                  </dl>
+                </div>
+                <div class="experience">
+                  <strong>Experience</strong>
+                  <dl>
+                    <dt>2020 - 2022</dt>
+                    <dd>주식회사 비커즈 디자이너 <br>
+                      어플리케이션 서비스 [조이의 숨] 기획 및 디자인</dd>
+                  </dl>
+                </div>
+              </div>
+              <div class="info1-right">
+                <div class="award">
+                  <strong>Award</strong>
+                  <dl>
+                    <dt>2020</dt>
+                    <dd>Lorem ipsum dolor sit amet consectetur adipisicing. </dd>
+                    <dt>2020</dt>
+                    <dd>Lorem ipsum dolor sit amet consectetur adipisicing. </dd>
+                    <dt>2020</dt>
+                    <dd>Lorem ipsum dolor sit amet consectetur adipisicing. </dd>
+                  </dl>
+                </div>
+              </div>
+            </div>
+            <div class="info2">
+              <strong>Skill</strong>
+              <ul>
+                <li>
+                  <img src="./img/ico-skill-figma.svg" alt="figma">
+                  <div class="levelbar-wrap">
+                    <div class="levelbar"></div>
+                  </div>
+                </li>
+                <li>
+                  <img src="./img/ico-skill-illustrator.svg" alt="illustrator">
+                  <div class="levelbar-wrap">
+                    <div class="levelbar"></div>
+                  </div>
+                </li>
+                <li>
+                  <img src="./img/ico-skill-photoshop.svg" alt="photoshop">
+                  <div class="levelbar-wrap">
+                    <div class="levelbar"></div>
+                  </div>
+                </li>
+                <li>
+                  <img src="./img/ico-skill-blender.svg" alt="blender">
+                  <div class="levelbar-wrap">
+                    <div class="levelbar"></div>
+                  </div>
+                </li>
+                <li>
+                  <img src="./img/ico-skill-html.svg" alt="html">
+                  <div class="levelbar-wrap">
+                    <div class="levelbar"></div>
+                  </div>
+                </li>
+                <li>
+                  <img src="./img/ico-skill-css.svg" alt="css">
+                  <div class="levelbar-wrap">
+                    <div class="levelbar"></div>
+                  </div>
+                </li>
+                <li>
+                  <img src="./img/ico-skill-js.svg" alt="js">
+                  <div class="levelbar-wrap">
+                    <div class="levelbar"></div>
+                  </div>
+                </li>
+                <li>
+                  <img src="./img/ico-skill-aftereffects.svg" alt="aftereffects">
+                  <div class="levelbar-wrap">
+                    <div class="levelbar"></div>
+                  </div>
+                </li>
+                <li>
+                  <img src="./img/ico-skill-premiere.svg" alt="premiere">
+                  <div class="levelbar-wrap">
+                    <div class="levelbar"></div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- Section 01 : about [03]card -->
+        <strong># ABOUT with card</strong>
+        <ul class="card-list">
+          <li>
+            <!-- 카드이미지 -->
+            <figure>
+              <img src="" alt="">
+            </figure>
+            <!-- 카드 호버시 나오는 텍스트 -->
+            <div class="card-detail">
+              <strong>Title</strong>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sint perspiciatis exercitationem
+                repellat impedit soluta minima eum, facilis nam quo!</p>
+            </div>
+          </li>
+          <li>
+            <!-- 카드이미지 -->
+            <figure>
+              <img src="" alt="">
+            </figure>
+            <!-- 카드 호버시 나오는 텍스트 -->
+            <div class="card-detail">
+              <strong>Title</strong>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sint perspiciatis exercitationem
+                repellat impedit soluta minima eum, facilis nam quo!</p>
+            </div>
+          </li>
+          <li>
+            <!-- 카드이미지 -->
+            <figure>
+              <img src="" alt="">
+            </figure>
+            <!-- 카드 호버시 나오는 텍스트 -->
+            <div class="card-detail">
+              <strong>Title</strong>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sint perspiciatis exercitationem
+                repellat impedit soluta minima eum, facilis nam quo!</p>
+            </div>
+          </li>
+        </ul>
       </div>
     </section>
+
+    <!-- Section 02 : Portfolio -->
+    <div class="inner">
+      <div class="sec-title">
+        <span>01</span>
+        <h2>about</h2>
+      </div>
+
+      <!-- Section 02 : Portfolio [01]project -->
+      <div class="portfolio">
+        <strong># Project</strong>
+      </div>
+    </div>
   </main>
 </body>
 
